# ghc-heap-view

./: .travis.yml  Demo.hs  LICENSE  Setup.hs  Test.hs  ghc-heap-view.cabal  ghc-heap-view.tex  ghci
.github/workflows/: haskell-ci.yml
cbits/: HeapView.c  HeapViewPrim.cmm
src/GHC/: AssertNF.hs  Disassembler.hs  HeapView.hs
src/GHC/HeapView/: Debug.hs  Graph.hs
